--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <!-- Mirrored from tejiajichang.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 26 Jul 2023 18:01:34 GMT -->
 <head>
-<title>起帆Cloud官网</title>
-<meta name="keywords" content="起帆Cloud官网">
-<meta name="description" content="起帆Cloud官网">
+<title>小鲤鱼官网</title>
+<meta name="keywords" content="小鲤鱼官网">
+<meta name="description" content="小鲤鱼官网">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
 <meta name="renderer" content="webkit">
@@ -39,7 +39,7 @@
 	</div>
 </div>
 <script>
-var url='https://www.qf1.us/';
+var url='https://www.xiaoliyu.me/';
 function progress(p){document.getElementById("progress-bar").style.width=p+"%"}
 setTimeout(function(){progress("5");setTimeout(function(){progress("60");setTimeout(function(){progress("95");window.location.href=url;},600);},800);},300);
 </script>
