--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	</div>
 </div>
 <script>
-var url='https://www.xiaoliyu.me/';
+var url='https://www.xly.one/';
 function progress(p){document.getElementById("progress-bar").style.width=p+"%"}
 setTimeout(function(){progress("5");setTimeout(function(){progress("60");setTimeout(function(){progress("95");window.location.href=url;},600);},800);},300);
 </script>
